--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@ function findFittingAllowance() {
             else if (pipeAngle == "45")
             {
                 fittingAllowance = "3/16";
-            } 
+            }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
+            }
         }
         if (pipeSize == "1/2")
         {
@@ -73,6 +81,14 @@ function findFittingAllowance() {
             else if (pipeAngle == "45")
             {
                 fittingAllowance = "3/16";
+            }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
             }
         }
         if (pipeSize == "3/4") 
@@ -85,6 +101,14 @@ function findFittingAllowance() {
             {
                 fittingAllowance = "1/4";
             }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
+            }
         }
         if (pipeSize == "1")
         {
@@ -95,6 +119,14 @@ function findFittingAllowance() {
             else if (pipeAngle == "45")
             {
                 fittingAllowance = "5/16";
+            }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
             }
         }
         if (pipeSize == "1 1/4")
@@ -206,6 +238,14 @@ function findFittingAllowance() {
             {
                 fittingAllowance = "1/4";
             }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
+            }
         }
         if (pipeSize == "1/2")
         {
@@ -216,6 +256,14 @@ function findFittingAllowance() {
             else if (pipeAngle == "45")
             {
                 fittingAllowance = "1/4";
+            }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
             }
         }
         if (pipeSize == "3/4")
@@ -228,6 +276,14 @@ function findFittingAllowance() {
             {
                 fittingAllowance = "5/16";
             }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
+            }
         }
         if (pipeSize == "1")
         {
@@ -239,6 +295,14 @@ function findFittingAllowance() {
             {
                  fittingAllowance = "5/16";
             }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
+            }
         }
         if (pipeSize == "1 1/4")
         {
@@ -249,6 +313,14 @@ function findFittingAllowance() {
             else if (pipeAngle == "45")
             {
                 fittingAllowance = "1";
+            }
+            else if (pipeAngle == "60")
+            {
+                fittingAllowance = "N/A";
+            }
+            else if (pipeAngle == "22 1/2")
+            {
+                fittingAllowance = "N/A" ;
             }
         }
         if (pipeSize == "1 1/2")
@@ -332,10 +404,6 @@ function findFittingAllowance() {
     document.getElementById("functAns").innerHTML = fittingAllowance;
 }
 </script>
-
-
-
-
 
 </body>
 </html>
