--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function findFittingAllowance() {
         }
     }
     
-    if (pipeMaterial == "pvc")
+    if (pipeMaterial == "PVC")
     {
         if (pipeSize == "3/8")
         {
