added select to box

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <form>
     Select the pipe material:
     <select id="matSelect">
+      <option value="" disabled selected hidden>Select...</option>
       <option value="copper">Copper</option>
       <option value="PVC">PVC</option>
     </select>
@@ -15,6 +16,7 @@
 <form>
     Select the pipe size:
     <select id="sizeSelect">
+      <option value="" disabled selected hidden>Select...</option>
       <option value="3/8">3/8</option>
       <option value="1/2">1/2</option>
       <option value="3/4">1/2</option>
@@ -30,6 +32,7 @@
 <form>
     Select the pipe size:
     <select id="angSelect">
+      <option value="" disabled selected hidden>Select...</option>
       <option value="90">90</option>
       <option value="45">45</option>
       <option value="60">60</option>
