--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">
 <head>
    <!--
@@ -14,53 +13,61 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>Fitting Allowance Calculator</title>
-   <!--<link href="dlr_reset.css" rel="stylesheet" />--> 
+   <link href="reset.css" rel="stylesheet" />
+   <link href="FittingAllCSS.css" rel="stylesheet" />
 </head>
 
 <body>
+
 <h1>Fitting Allowance Calculator</h1>
 
-<form>
-    Select the pipe material:
-    <select id="matSelect">
-      <option value="" disabled selected hidden>Select...</option>
-      <option value="copper">Copper</option>
-      <option value="PVC">PVC</option>
-    </select>
-</form>
+<div class = "dropDown">
+    <form class="input">
+        Pipe Material:
+        <select class = "sel" id="matSelect">
+        <option value="" disabled selected hidden>Select...</option>
+        <option value="copper">Copper</option>
+        <option value="PVC">PVC</option>
+        </select>
+    </form>
 
-<form>
-    Select the pipe size:
-    <select id="sizeSelect">
-      <option value="" disabled selected hidden>Select...</option>
-      <option value="3/8">3/8</option>
-      <option value="1/2">1/2</option>
-      <option value="3/4">1/2</option>
-      <option value="1">1</option>
-      <option value="1 1/4">1 1/4</option>
-      <option value="1 1/2">1 1/2</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-    </select>
-</form>
+    <form class="input">
+        Pipe Size:
+        <select class = "sel" id="sizeSelect">
+        <option value="" disabled selected hidden>Select...</option>
+        <option value="3/8">3/8</option>
+        <option value="1/2">1/2</option>
+        <option value="3/4">1/2</option>
+        <option value="1">1</option>
+        <option value="1 1/4">1 1/4</option>
+        <option value="1 1/2">1 1/2</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        </select>
+    </form>
 
-<form>
-    Select the pipe size:
-    <select id="angSelect">
-      <option value="" disabled selected hidden>Select...</option>
-      <option value="90">90</option>
-      <option value="45">45</option>
-      <option value="60">60</option>
-      <option value="22 1/2">22 1/2</option>
-    </select>
-</form>
+    <form class="input">
+        Pipe Angle:
+        <select class = "sel"  id="angSelect">
+        <option value="" disabled selected hidden>Select...</option>
+        <option value="90">90</option>
+        <option value="45">45</option>
+        <option value="60">60</option>
+        <option value="22 1/2">22 1/2</option>
+        </select>
+    </form>
+</div>
 
-<button type="button" onclick="findFittingAllowance()">Get Answer</button>
-<p id="ans">The fitting allowance is:</p>
-<p id="functAns"></p>
+<button id="ansButton" type="button" onclick="findFittingAllowance()">Get Answer</button>
+
+<div class="answer">
+    <p id="ans">The fitting allowance is:</p>
+    <p id="functAns"></p>
+</div>
 
 <script src="FittingAllJava.js"></script> 
+
 
 </body>
 </html>
