--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         Pipe Angle:
         <select class = "sel"  id="angSelect">
         <option value="" disabled selected hidden>Select...</option>
-        <option value="90">90</option>
-        <option value="45">45</option>
-        <option value="60">60</option>
-        <option value="22 1/2">22 1/2</option>
+        <option value="90">90<span>&#176;</span></option>
+        <option value="45">45<span>&#176;</span></option>
+        <option value="60">60<span>&#176;</span></option>
+        <option value="22 1/2">22 1/2<span>&#176;</span></option>
         </select>
     </form>
 </div>
