--- a/index.html
+++ b/index.html
@@ -9,61 +9,24 @@
 
       Filename:   index.html
    -->
-   
+
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <title>Fitting Allowance Calculator</title>
    <link href="reset.css" rel="stylesheet" />
-   <link href="FittingAllCSS.css" rel="stylesheet" />
+   <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
 
-<h1>Fitting Allowance Calculator</h1>
+<h1>Basic Plumbing Calculations</h1>
 
-<div class = "dropDown">
-    <form class="input">
-        Pipe Material:&nbsp;
-        <select class = "sel" id="matSelect">
-        <option value="" disabled selected hidden>Select...</option>
-        <option value="copper">Copper</option>
-        <option value="PVC">PVC</option>
-        </select>
-    </form>
+<div class = "progsList">
+    
+    <ul>
+        <li><a href="fittingAll.html">Fitting Allowance Calculator</a></link>
+    </ul>
 
-    <form class="input">
-        Pipe Size:&nbsp;
-        <select class = "sel" id="sizeSelect">
-        <option value="" disabled selected hidden>Select...</option>
-        <option value="3/8">3/8</option>
-        <option value="1/2">1/2</option>
-        <option value="3/4">1/2</option>
-        <option value="1">1</option>
-        <option value="1 1/4">1 1/4</option>
-        <option value="1 1/2">1 1/2</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        </select>
-    </form>
-
-    <form class="input">
-        Pipe Angle:&nbsp;
-        <select class = "sel"  id="angSelect">
-        <option value="" disabled selected hidden>Select...</option>
-        <option value="90">90<span>&#176;</span></option>
-        <option value="45">45<span>&#176;</span></option>
-        <option value="60">60<span>&#176;</span></option>
-        <option value="22 1/2">22 1/2<span>&#176;</span></option>
-        </select>
-    </form>
 </div>
 
-<button id="ansButton" type="button" onclick="findFittingAllowance()">Calculate Fitting Allowance</button>
-
-<p id="functAns"></p>
-
-<script src="FittingAllJava.js"></script> 
-
 </body>
-</html>
