--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
 
 <h1>Basic Plumbing Calculations</h1>
 
-<div class = "progsList">
-    
-    <ul>
-        <li><a href="fittingAll.html">Fitting Allowance Calculator</a></link>
-    </ul>
 
-</div>
+<ul>
+    <li><a href=""https://cassandrathalia.github.io/plumbingcalc/FittingAll.html">Fitting Allowance Calculator</a></link>
+</ul>
+
 
 </body>
