fixing buttons and home page

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
 
 <h1>Basic Plumbing Calculations</h1>
 
-
-<ul>
-    <li><a href=""https://cassandrathalia.github.io/plumbingcalc/FittingAll.html">Fitting Allowance Calculator</a></link>
-</ul>
+<button id = "FittingAll" onclick="document.location='FittingAll.html'">Fitting Allowance Calculator</button>
 
 
 </body>
