--- a/WaterPipeSizing.html
+++ b/WaterPipeSizing.html
@@ -20,7 +20,7 @@
 
 <body>
 
-<h1>Water Pipe Sizing - Table 2.6.3.4</h1>
+<h1>Home Water Pipe Sizing - Table 2.6.3.4</h1>
 
 <div>
 <form class="input">
